[package]
license = "MIT"

name = "service-helpe-rs"
version = "0.9.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
tracing-gelf = [
    "dep:tracing-gelf",
    "tracing-log",
    "tracing-subscriber",
    "dep:tokio",
]
metrics = ["prometheus"]
tokio = ["dep:tokio"]
warp = ["dep:warp"]
axum = ["dep:axum", "http", "lazy_static", "futures", "tower"]
tracing = ["dep:tracing", "uuid", "data-encoding"]
jwt = ["jsonwebtoken", "serde_json"]

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "0.9"
envy = "0.4"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
], optional = true }
tracing-log = { version = "0.2", optional = true }
tracing-gelf = { version = "0.9", optional = true }
tracing = { version = "0.1", optional = true }
tokio = { version = "^1.0", features = ["rt"], optional = true }
anyhow = "1"
thiserror = "2"
prometheus = { version = "0.14", features = ["process"], optional = true }
log = "0.4"
warp = { version = "0.4", optional = true }

http = { version = "1", optional = true }
axum = { version = "^0.8", optional = true }
tower = { version = "0.5", optional = true }
lazy_static = { version = "^1.4", optional = true }
futures = { version = "0.3", optional = true }

uuid = { version = "1", features = ["v4"], optional = true }
data-encoding = { version = "2", optional = true }
jsonwebtoken = { version = "8", optional = true }
serde_json = { version = "1", optional = true }


[dev-dependencies]
tempfile = "3"
